# factorslib

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: RunBranchCoverage.cmake
docs/: CONFIRMED.md  Logging.md  Manual.md  demo_wiring.md  new_factor_guide.md
include/: factor_factory.h  factor_manager.h  ifactor.h
include/bridge/: ingress.h
include/config/: config_utils.h  runtime_config.h
include/core/: databus.h  factor_factory.h  ifactor.h  scope_key.h  types.h
include/factorlib/bridge/: ingress.h
include/factors/Kline_new/: bma_ensemble_drift_factor.h  dmd_growth_rate_factor.h  haar_wavelet_trend_factor.h  hmm_uptrend_prob_factor.h  ssa_trend_slope_factor.h
include/factors/basic/: tick_trans_orders.h
include/factors/kline/: ar1_return_factor.h  bayes_drift_logodds_factor.h  gls_drift_z_factor.h  high_volume_remaining_factor.h  hmm2_logodds_factor.h  kalman_forecast_z_factor.h  low_freq_return_factor.h  ma_zero_cross_factor.h  spectral_autocorr_factor.h  volume_ar_forecast_factor.h  volume_price_structure_factor.h  wls_drift_z_factor.h
include/factors/stat/: gaussian_copula_factor.h  granger_causality_factor.h  hawkes_intensity_factor.h  least_squares_info_gain_factor.h  memory_kernel_decay_factor.h  pca_angular_momentum_factor.h  pca_structure_stability_factor.h  probability_momentum_factor.h  symbolic_transition_factor.h  (+3 more)
include/instrumentation/: trace_helper.h
include/math/: bad_value_policy.h  distributions.h  fnn.h  fractional_diff.h  hawkes_intensity.h  incremental_covariance.h  incremental_rank.h  incremental_rank_ext.h  info_geometry.h  linear_algebra.h  math_methods_usage_detail.md  memory_kernel.h  modwt.h  numeric_utils.h  online_pca.h  persistent_homology_h0.h  rolling_autocorr.h  rolling_entropy.h  rosenstein_lyapunov.h  sliding_normal_eq.h  sliding_statistics.h  statistics.h  symbolic_dynamics.h  tda_rips_h1.h  vector_field_analysis.h
include/tools/: RCER.h  factor_ic_runtime.h  factor_leverage_transformer.h  kline_csv_loader.h  sliding_gaussian_leverage.h
include/utils/: config_utils.h  data_adapter.h  databus.h  fs_compat.h  log.h  math_utils.h  nms_bucket_aggregator.h  processing_axes.h  scope_key.h  trace_helper.h  trading_time.h  types.h  utils.h
output/factor_leverage/: plot_hist.py
src/: factor_factory.cpp  gaussian_copula_factor.cpp  gaussian_copula_factor.h  granger_causality_factor.cpp  granger_causality_factor.h
src/basic_factors/: tick_trans_orders.cpp  tick_trans_orders.h
src/bridge/: ingress.cpp
src/config/: runtime_config.cpp  runtime_config.ini
src/stat_factors/: gaussian_copula_factor.cpp  gaussian_copula_factor.h  granger_causality_factor.cpp  granger_causality_factor.h  hawkes_intensity_factor.cpp  hawkes_intensity_factor.h  least_squares_info_gain_factor.cpp  least_squares_info_gain_factor.h  memory_kernel_decay_factor.cpp  memory_kernel_decay_factor.h  pca_angular_momentum_factor.cpp  pca_angular_momentum_factor.h  pca_structure_stability_factor.cpp  pca_structure_stability_factor.h  probability_momentum_factor.cpp  probability_momentum_factor.h  symbolic_transition_factor.cpp  symbolic_transition_factor.h  volume_mgf_factor.cpp  volume_mgf_factor.h  volume_multiscale_autocorr_factor.cpp  volume_multiscale_autocorr_factor.h  wavelet_trend_energy_factor.cpp  wavelet_trend_energy_factor.h
src/tools/: RCER.cpp  factor_ic_runtime.cpp  factor_leverage_optimizer.cpp  factor_leverage_optimizer.h  factor_leverage_tool.cpp  factor_leverage_tool.md  factor_leverage_tool_config.cpp  factor_leverage_tool_config.h  factor_leverage_tool_new.cpp  factor_leverage_tool_new.md  factor_leverage_transformer.cpp  factor_leverage_transformer.h  factor_leverage_transformer_lib.cpp  factor_tool_config.cpp  factor_tool_config.h  kline_csv_loader.cpp  kline_csv_loader.h  sliding_gaussian_leverage.h
src/utils/: data_adapter.cpp  log.cpp  math_utils.cpp  nms_bucket_aggregator.cpp  processing_axes.cpp  trace_helper.cpp  trading_time.cpp  utils.cpp
tests/: factor_compute_test.cpp  factor_ic_tool.cpp  gaussian_copula_factor_test.cpp  granger_causality_factor_test.cpp  gtest_printer_zh.h  test_bus_and_factor.cpp  test_wait.cpp  tick_trans_orders_test.cpp
tests/Kline_factors_tests/: CMakeLists.txt  ar1_return_factor_test.cpp  bayes_drift_logodds_factor_test.cpp  gls_drift_z_factor_test.cpp  high_volume_remaining_factor_test.cpp  hmm2_logodds_factor_test.cpp  low_freq_return_test.cpp  wls_drift_z_factor_test.cpp
tests/basic_factors_tests/: tick_trans_orders_test.cpp
tests/data/: 8841388.WI-行情统计-20251117.csv  bars_minute_csv.csv  snapshot_quotes_csv.csv  transactions_tick_csv.csv
tests/integration/: demo_min_e2e_test.cpp
tests/math_tests/:  sliding_statistics_test.cpp  CMakeLists.txt  distributions_test.cpp  fnn_test.cpp  fractional_diff_test.cpp  hawkes_intensity_test.cpp  incremental_covariance_test.cpp  incremental_rank_ext_test.cpp  incremental_rank_test.cpp  info_geometry_test.cpp  linear_algebra_test.cpp  memory_kernel_test.cpp  modwt_test.cpp  numeric_utils_test.cpp  online_pca_test.cpp  persistent_h0_test.cpp  rolling_autocorr_test.cpp  rolling_entropy_test.cpp  rosenstein_lyapunov_test.cpp  sliding_normal_eq_test.cpp  sliding_statistics_test.cpp  statistics_test.cpp  symbolic_dynamics_test.cpp  tda_rips_h1_test.cpp  vector_field_analysis_test.cpp
tests/math_tests/nn/: ann_index_test.cpp
tests/stat_factors_tests/: CMakeLists.txt  gaussian_copula_factor_test.cpp  granger_causality_factor_test.cpp  hawkes_intensity_factor_test.cpp  least_squares_info_gain_factor_test.cpp  memory_kernel_decay_factor_test.cpp  pca_angular_momentum_factor_test.cpp  pca_structure_stability_factor_test.cpp  probability_momentum_factor_test.cpp  stat_factors_tests_main.cpp  symbolic_transition_factor_test.cpp  volume_mgf_factor_test.cpp  volume_multiscale_autocorr_factor_test.cpp  wavelet_trend_energy_factor_test.cpp
tests/tools/: factor_ic_runtime_test.cpp
tests/utils/: NumCountSimulation.cpp  NumCountSimulation.h  data_gen.h  databus_test.cpp  test_config.cpp  test_config.h  test_config.ini  trace_helper_test.cpp
(+38 files in other folders)
